# overflow-arithmetic

./: .gitignore  Cargo.toml  README.md  world.wit
example/: Cargo.toml  build.sh  spin.toml
example/.spin/logs/: example_stderr.txt
example/src/: bindings.rs  lib.rs
