[package]
name = "example"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.114", features = ["preserve_order"] }
spin-sdk = "2.2.0"
bitflags = "2.4.2"
wit-bindgen-rt = "0.21.0"

[package.metadata.component]
package = "arithmetic:example"
target = { path = "../world.wit", world = "imports"  }

[package.metadata.component.bindings]
derives = ["serde::Serialize", "serde::Deserialize"]